[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "eva"
version = "0.0.1"
description = "Evaluation Framework for oncology foundation models."
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Ioannis Gatopoulos", email = "ioannis@kaiko.ai" },
    { name = "Nicolas Känzig", email = "nicolas@kaiko.ai" },
    { name = "Roman Moser", email = "roman@kaiko.ai" },
]
maintainers = [
    { name = "Ioannis Gatopoulos", email = "ioannis@kaiko.ai" },
    { name = "Nicolas Känzig", email = "nicolas@kaiko.ai" },
    { name = "Roman Moser", email = "roman@kaiko.ai" },
]
requires-python = ">=3.10"
dependencies = [
    "pytorch-lightning>=2.1.3",
    "loguru>=0.7.2",
    "jsonargparse[signature]>=4.27.4",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
vision = [
    "torchvision>=0.16.2",
    "opencv-python-headless>=4.9.0.80",
    "torchvision>=0.17.0",
    "h5py>=3.10.0",
]
all = ["eva[vision]"]

[tool.pdm.dev-dependencies]
lint = [
    "isort>=5.12.0",
    "black>=23.1.0",
    "ruff>=0.0.254",
    "pyright>=1.1.295",
    "yamllint>=1.29.0",
    "nox>=2022.11.21",
    "bandit>=1.7.6",
]
test = [
    "pygments>=2.14.0",
    "pytest>=7.2.2",
    "nox>=2022.11.21",
    "pytest-cov>=4.1.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-material>=9.5.6",
]
dev = ["eva[lint, test, docs]"]

[project.scripts]
eva = "eva.__main__:main"

[tool.isort]
atomic = true
profile = "black"
line_length = 100
skip_gitignore = true

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
lint.select = ["A", "B", "C", "D", "E", "F"]
lint.ignore = ["D401"]
line-length = 100
target-version = "py310"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.bandit]
exclude_dirs = [".venv", "tests/**"]

[tool.pyright]
pythonVersion = "3.10"
# Skip due to https://github.com/microsoft/pyright/issues/7095
reportIncompatibleMethodOverride = false
exclude = [
    "__pypackages__",
    ".nox",
]

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage]
precision = 2
range = [95, 100]

[tool.coverage.run]
omit = [
    "__pypackages__/*",
    "/private/*",
]

[tool.coverage.comment]
layout = "header, diff, flags, files, footer"
