[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[project]
name = "kaiko-eva"
version = "0.3.0"
description = "Evaluation Framework for oncology foundation models."
keywords = [
    "machine-learning",
    "evaluation-framework",
    "oncology",
    "foundation-models",
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
authors = [
    { name = "Ioannis Gatopoulos", email = "ioannis@kaiko.ai" },
    { name = "Nicolas Känzig", email = "nicolas@kaiko.ai" },
    { name = "Roman Moser", email = "roman@kaiko.ai" },
]
maintainers = [
    { name = "Ioannis Gatopoulos", email = "ioannis@kaiko.ai" },
    { name = "Nicolas Känzig", email = "nicolas@kaiko.ai" },
    { name = "Roman Moser", email = "roman@kaiko.ai" },
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "lightning>=2.2.0",
    "jsonargparse[omegaconf]>=4.30.0",
    "tensorboard>=2.16.2",
    "loguru>=0.7.2",
    "pandas>=2.0.0",
    "transformers>=4.38.2",
    "onnxruntime>=1.15.1",
    "onnx>=1.16.0",
    "toolz>=0.12.1",
    "rich>=13.7.1",
    "torchmetrics>=1.6.0",
    "nibabel>=3.2.2",
]

[project.urls]
Homepage = "https://kaiko-ai.github.io/eva/dev/"
Repository = "https://github.com/kaiko-ai/eva"
Documentation = "https://kaiko-ai.github.io/eva/dev/"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
vision = [
    "h5py>=3.10.0",
    "nibabel>=4.0.1",
    "opencv-python-headless>=4.9.0.80",
    "timm>=1.0.9",
    "torchvision>=0.17.0",
    "openslide-python>=1.3.1",
    "gdown>=5.2.0",
    "scikit-image>=0.24.0",
    "imagesize>=1.4.1",
    "scipy>=1.14.0",
    "monai>=1.3.2",
    "einops>=0.8.1",
]
language = [
    "datasets>=3.2.0",
    "litellm>=1.61.8",
]
all = [
    "h5py>=3.10.0",
    "nibabel>=4.0.1",
    "opencv-python-headless>=4.9.0.80",
    "timm>=1.0.9",
    "torchvision>=0.17.0",
    "openslide-python>=1.3.1",
    "gdown>=5.2.0",
    "scikit-image>=0.24.0",
    "imagesize>=1.4.1",
    "scipy>=1.14.0",
    "monai>=1.3.2",
    "einops>=0.8.1",
    "datasets>=3.2.0",
    "litellm>=1.61.8",
]

[project.scripts]
eva = "eva.__main__:main"
kaiko-eva = "eva.__main__:main"

[tool.pdm.build]
package-dir = "src"
includes = [
    "src/eva",
]

[tool.pdm.scripts]
bump = "nox -s bump"

[tool.pdm.dev-dependencies]
lint = [
    "isort>=5.12.0",
    "black>=23.1.0",
    "ruff>=0.0.254",
    "yamllint>=1.29.0",
    "bandit>=1.7.6",
]
typecheck = [
    "pyright>=1.1.295",
    "pytest>=7.2.2",
    "nox>=2024.3.2",
]
test = [
    "pygments>=2.14.0",
    "pytest>=7.2.2",
    "pytest-cov>=4.1.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.6",
    "mkdocstrings[python]>=0.24.0",
    "mike>=2.0.0",
    "setuptools>=62.3.3",
    "markdown-exec>=0.7.0",
    "mkdocs-redirects>=1.2.0",
    "mkdocs-version-annotations>=1.0.0",
]
dev = [
    "isort>=5.12.0",
    "black>=23.1.0",
    "ruff>=0.0.254",
    "yamllint>=1.29.0",
    "bandit>=1.7.6",
    "pyright>=1.1.295",
    "nox>=2024.3.2",
    "pygments>=2.14.0",
    "pytest>=7.2.2",
    "pytest-cov>=4.1.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.6",
    "mkdocstrings[python]>=0.24.0",
    "mike>=2.0.0",
    "setuptools>=62.3.3",
    "markdown-exec>=0.7.0",
    "mkdocs-redirects>=1.2.0",
    "mkdocs-version-annotations>=1.0.0",
]

[tool.isort]
atomic = true
profile = "black"
line_length = 100
skip_gitignore = true

[tool.black]
target-version = [
    "py310",
]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
]
ignore = [
    "D401",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.bandit]
exclude_dirs = [
    ".venv",
    "tests/**",
]

[tool.pyright]
pythonVersion = "3.10"
reportIncompatibleMethodOverride = false
exclude = [
    "__pypackages__",
    ".nox",
]

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--strict-markers",
    "--no-cov-on-fail",
    "--maxfail=1",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage]
precision = 2
range = [
    95,
    100,
]

[tool.coverage.run]
omit = [
    "__pypackages__/*",
    "/private/*",
]

[tool.coverage.comment]
layout = "header, diff, flags, files, footer"
